--- a/skills.html
+++ b/skills.html
@@ -121,7 +121,7 @@
           </figcaption>
         </figure>
         <figure class="card Software">
-          <img class="card__image" loading="lazy" src="images\skills\AutoCAD.png" height="150px" alt="">
+          <img class="card__image" loading="lazy" src="images\skills\Autocad.png" height="150px" alt="">
           <figcaption class="card__caption">AutoCAD
             <br></br>
             <i class="fa-solid fa-star fa-xs"></i>
@@ -308,7 +308,7 @@
         </figcaption>
         </figure> -->
         <figure class="card Etc">
-          <img class="card__image" loading="lazy" src="images\skills\BREEAM.png" height="150px" alt="">
+          <img class="card__image" loading="lazy" src="images\skills\Breeam.png" height="150px" alt="">
           <figcaption class="card__caption">BREEAM
             <br></br>
             <i class="fa-solid fa-star fa-xs"></i>
