--- a/aboutme.html
+++ b/aboutme.html
@@ -46,7 +46,7 @@
             <div class="boxes">
 
                 <article>
-                    <img src="images\aboutme\cvpiccrop.png" width="280px">
+<!--                     <img src="images\aboutme\cvpiccrop.png" width="280px"> -->
 
                 </article>
 
