--- a/aboutme.html
+++ b/aboutme.html
@@ -25,8 +25,7 @@
                 <ul class="nav-menu">
                     <li><a href="index.html" class="nav-links">HOME</a></li>
                     <li><a href="aboutme.html" class="nav-links">ABOUT ME</a></li>
-                    <li><a href="education.html" class="nav-links">EDUCATION</a></li>
-                    <li><a href="experience.html" class="nav-links">EXPERIENCE</a></li>
+                    <li><a href="education.html" class="nav-links">EDUCATION & EXPERIENCE</a></li>
                     <li><a href="projects.html" class="nav-links">PROJECTS</a></li>
                     <li><a href="skills.html" class="nav-links">SKILLS</a></li>
                     <li><a href="contact.html" class="nav-links">CONTACT</a></li>
@@ -56,7 +55,7 @@
                     <h2 class="title">About Me</h2>
                     <p class="description">
                         My name is Eda Akaltun, and I'm 22 years old.
-                        I’m currently a first year MSc Building Technology student at the Technical University of Delft
+                        I’m currently a last year MSc Building Technology student at the Technical University of Delft
                         and in the meantime active in the Solar Decathlon team of my university as a Climate Systems
                         engineer & contest champion for ventilation.
                         <br></br>
@@ -82,6 +81,9 @@
                     <script src="language.js"></script>
                 </article>
             </div>
+
+
+            
         </div>
 
 
