--- a/contact.html
+++ b/contact.html
@@ -25,8 +25,7 @@
         <ul class="nav-menu">
           <li><a href="index.html" class="nav-links">HOME</a></li>
           <li><a href="aboutme.html" class="nav-links">ABOUT ME</a></li>
-          <li><a href="education.html" class="nav-links">EDUCATION</a></li>
-          <li><a href="experience.html" class="nav-links">EXPERIENCE</a></li>
+          <li><a href="education.html" class="nav-links">EDUCATION & EXPERIENCE</a></li>
           <li><a href="projects.html" class="nav-links">PROJECTS</a></li>
           <li><a href="skills.html" class="nav-links">SKILLS</a></li>
           <li><a href="contact.html" class="nav-links">CONTACT</a></li>
@@ -46,6 +45,7 @@
     <br></br>
     <div class="text">
       <h1> Contact</h1>
+      <h2> Currently Unavailable</h2>
     </div>
     <br></br> <br></br>
     <form>
