--- a/education.html
+++ b/education.html
@@ -24,8 +24,7 @@
                 <ul class="nav-menu">
                     <li><a href="index.html" class="nav-links">HOME</a></li>
                     <li><a href="aboutme.html" class="nav-links">ABOUT ME</a></li>
-                    <li><a href="education.html" class="nav-links">EDUCATION</a></li>
-                    <li><a href="experience.html" class="nav-links">EXPERIENCE</a></li>
+                    <li><a href="education.html" class="nav-links">EDUCATION & EXPERIENCE</a></li>
                     <li><a href="projects.html" class="nav-links">PROJECTS</a></li>
                     <li><a href="skills.html" class="nav-links">SKILLS</a></li>
                     <li><a href="contact.html" class="nav-links">CONTACT</a></li>
@@ -43,42 +42,92 @@
         <br></br>
         <div class="overflowcontainer_nonhome">
             <div class="text">
+                <h1> Work & Internship</h1>
+            </div>
+
+            <div class="textbox">
+                <img class="textbox_image_logos"
+                    src="/images/logos/hfb.jpg">
+
+                <h2>HFB</h2>
+                <p>Graduation intership
+                    BENG 1 in the conceptual phase · (January 2020 - July 2020, 7 months)
+                    <br></br>
+                    Revit modeler
+                    Existing buildings and New Projects · (January 2019 - January 2020, 1 year 1 month)
+
+                    <br></br>
+                    Internship
+                    BIM · (August 2018 - January 2019, 6 months)</p>
+
+            </div>
+
+            <br></br>
+            <div class="text">
+                <h1> Volunteer</h1>
+            </div>
+
+
+
+            <div class="textbox">
+                <img class="textbox_image_logos"
+                    src="/images/logos/sum.png">
+
+                <h2>SUM - Symbiotic Urban Movement</h2>
+                <p>Climate Systems Engineer
+                    SUM · (June 2021 - June 2022, 1 year)</p>
+
+            </div>
+
+            <div class="textbox">
+                <img class="textbox_image_logos"
+                    src="/images/logos/bk.jpg">
+
+                <h2>TU Delft Faculty of Architecture and the Built Environment</h2>
+                <p>Student Council member 2022/2023
+                    <br></br>
+                    Student mentor · (Aug 2021 - Feb 2022, 7 months)
+                </p>
+
+            </div>
+
+            <div class="text">
                 <h1> School</h1>
             </div>
 
             <div class="textbox">
                 <img class="textbox_image_logos"
-                    src="https://media-exp2.licdn.com/dms/image/C4D0BAQF47O_hsjJnpg/company-logo_100_100/0/1639217383649?e=1663200000&v=beta&t=-ls2XA1wzF2CIQuLB1cpm9iHh-xXk7n2JR46LPa0BB4">
+                    src="/images/logos/tudelft.jpg">
                 <div class="textbox_text">
                     <h2>Delft University of Technology</h2>
                     <p>Technische Universiteit Delft
                         MSc Architecture, Urbanism and Building Sciences , Building
-                        Technology · (August 2021 - present)
+                        Technology · (August 2021 - June 2023, 2 years)
 
                         <br> </br>
                         Technische Universiteit Delft
                         Bridging programme, MSc Geomatics & MSc Architecture, Urbanism and
-                        Building Sciences · (2020 - 2021)
+                        Building Sciences · (2020 - 2021, 1 year)
                     </p>
                 </div>
             </div>
 
             <div class="textbox">
                 <img
-                    src="https://media-exp2.licdn.com/dms/image/C4D0BAQFtr7VqGaVWcQ/company-logo_100_100/0/1519902744083?e=1663200000&v=beta&t=zI04FevWzcUM4RTa9H_VcMB3-CZ2paFY-W3dN0ileU0">
+                    src="/images/logos/hhs.jpg">
                 <h2>The Hague University of Applied Sciences</h2>
                 <p>De Haagse Hogeschool / The Hague University of Applied Sciences
                     Bachelor of Science - BSc, Architecture and Construction Engineering
-                    (Bouwkunde) - Four years, 240 credits · (2016 - 2020)
+                    (Bouwkunde) - 240 credits · (2016 - 2020, 4 years)
                 </p>
             </div>
 
 
             <div class="textbox">
                 <img
-                    src="https://media-exp2.licdn.com/dms/image/C4E0BAQHz2iggX_9ZJg/company-logo_100_100/0/1612731538403?e=1663200000&v=beta&t=GZEwFZb3KM2AiX4D5BTtQqZw6iGcEq51gQutFmN3iBo">
+                    src="/images/logos/maerlant.jpg">
                 <h2>Maerlant-Lyceum</h2>
-                <p>Natuur & Techniek + Natuur & Gezondheid · (2011 - 2016)</p>
+                <p>Natuur & Techniek + Natuur & Gezondheid · (2011 - 2016, 5 years)</p>
             </div>
 
 
@@ -89,7 +138,7 @@
 
             <div class="textbox">
                 <img class="textbox_image_logos"
-                    src="https://media-exp2.licdn.com/dms/image/C4E0BAQF764moHT29Og/company-logo_100_100/0/1650876512808?e=1663200000&v=beta&t=SuB7w8Sig3_NgPgP_g7J7Bc8cx1Be_YSDTsS8UAPySg">
+                    src="/images/logos/x.jpg">
                 <div class="textbox_text">
                     <h2>Cambridge Assessment English</h2>
                     <p>Certificate of Proficiency in English (CEFR Level C2) · (2020)
@@ -99,7 +148,7 @@
 
             <div class="textbox">
                 <img
-                    src="https://media-exp2.licdn.com/dms/image/C4D0BAQHXHOFArjkdnw/company-logo_100_100/0/1558348506345?e=1663200000&v=beta&t=lvMbwF7QqgCrZ3RYvSCO1zcXZhR0iDYRglMM-mtB5Jk">
+                    src="/images/logos/x.jpg">
                 <h2>Koninklijke PBNA</h2>
                 <p>VOL-VCA · (2018 - 2028)
             </div>
