--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
         <ul class="nav-menu">
           <li><a href="index.html" class="nav-links">HOME</a></li>
           <li><a href="aboutme.html" class="nav-links">ABOUT ME</a></li>
-          <li><a href="education.html" class="nav-links">EDUCATION</a></li>
-          <li><a href="experience.html" class="nav-links">EXPERIENCE</a></li>
+          <li><a href="education.html" class="nav-links">EDUCATION & EXPERIENCE</a></li>
           <li><a href="projects.html" class="nav-links">PROJECTS</a></li>
           <li><a href="skills.html" class="nav-links">SKILLS</a></li>
           <li><a href="contact.html" class="nav-links">CONTACT</a></li>
@@ -49,8 +48,8 @@
               src="images\indexmap\aboutme.png"> </a>
           <a href="education.html"> <img class="overflowcontainer_home_Education shadowfilter"
               src="images\indexmap\education.png"></a>
-          <a href="experience.html"> <img class="overflowcontainer_home_Experience shadowfilter"
-              src="images\indexmap\experience.png"></a>
+          <!-- <a href="experience.html"> <img class="overflowcontainer_home_Experience shadowfilter"
+              src="images\indexmap\experience.png"></a> -->
           <a href="projects.html"> <img class="overflowcontainer_home_Projects shadowfilter"
               src="images\indexmap\projects.png"></a>
           <a href="skills.html"> <img class="overflowcontainer_home_Skills shadowfilter"
