--- a/projects.html
+++ b/projects.html
@@ -25,8 +25,7 @@
         <ul class="nav-menu">
           <li><a href="index.html" class="nav-links">HOME</a></li>
           <li><a href="aboutme.html" class="nav-links">ABOUT ME</a></li>
-          <li><a href="education.html" class="nav-links">EDUCATION</a></li>
-          <li><a href="experience.html" class="nav-links">EXPERIENCE</a></li>
+          <li><a href="education.html" class="nav-links">EDUCATION & EXPERIENCE</a></li>
           <li><a href="projects.html" class="nav-links">PROJECTS</a></li>
           <li><a href="skills.html" class="nav-links">SKILLS</a></li>
           <li><a href="contact.html" class="nav-links">CONTACT</a></li>
@@ -52,7 +51,8 @@
 
       <meta name="viewport" content="width=device-width">
       <input type="radio" name="filter" id="all" checked><label for="all">All</label>
-      <input type="radio" name="filter" id="Architecture"><label for="Architecture">Architecture & Construction</label>
+      <input type="radio" name="filter" id="Architecture"><label for="Architecture">Architecture & Structural</label>
+      <input type="radio" name="filter" id="Sustainability"><label for="Sustainability">Sustainability</label>
       <input type="radio" name="filter" id="Code"><label for="Code">Code</label>
       <input type="radio" name="filter" id="Product"><label for="Product">Product</label>
       <!-- <input type="radio" name="filter" id="Graphic"><label for="Graphic">Design</label> -->
@@ -62,7 +62,17 @@
               src="images\projecten\Structural\6.png" height="250px" alt=""> </a>
           <figcaption class="card__caption">Structural Design - Full Glass Observatory</figcaption>
         </figure>
-        <figure class="card Architecture">
+        <figure class="card Code">
+          <a href="https://github.com/EdaAkaltun/Project-T"> <img class="card__image" loading="lazy"
+              src="" height="250px" alt=""> </a>
+          <figcaption class="card__caption">Project T - Graduation Thesis</figcaption>
+        </figure>
+        <figure class="card Code">
+          <a href="https://github.com/EdaAkaltun/MIEV"> <img class="card__image" loading="lazy"
+              src="https://camo.githubusercontent.com/5893e88012d2c5b2a712ee80d3fb6f010346c2ecdf501f61364f30769b50753e/68747470733a2f2f63646e2e646973636f72646170702e636f6d2f6174746163686d656e74732f3834303636393930313832373939373730372f313034313436353132393636373134393937342f68696768715f69736f2e6a7067" height="250px" alt=""> </a>
+          <figcaption class="card__caption">MIEV</figcaption>
+        </figure>
+        <figure class="card Sustainability">
           <a href="https://www.delftsolardecathlon.com/" target="_blank"> <img class="card__image" loading="lazy"
               src="images\projecten\SUM\test6_exterior_1.jpg" height="250px" alt=""> </a>
           <figcaption class="card__caption">SUM - Solar Decathlon EU</figcaption>
@@ -82,20 +92,20 @@
               height="250px" alt=""> </a>
           <figcaption class="card__caption">CSS Portfolio</figcaption>
         </figure>
-        <figure class="card Architecture">
+        <figure class="card Sustainability">
           <a href="projects_zero.html"> <img class="card__image" loading="lazy"
               src="images\projecten\Zero\situation2.png" height="250px" alt=""> </a>
           <figcaption class="card__caption">ZERO Energy</figcaption>
         </figure>
         <figure class="card Product">
-          <a href="projects_bucky.html"> <img class="card__image" loading="lazy"
+          <a href=""> <img class="card__image" loading="lazy"
               src="images\projecten\Bucky\render_buckyfacade.png" height="250px" alt=""></a>
           <figcaption class="card__caption">BUCKY LAB</figcaption>
         </figure>
         <figure class="card Architecture">
-          <a href="projects_on6.html"> <img class="card__image" loading="lazy" src="images\projecten\ON6\render.png"
+          <a href=""> <img class="card__image" loading="lazy" src="images\projecten\ON6\render.png"
               height="250px" alt=""></a>
-          <figcaption class="card__caption">ON6</figcaption>
+          <figcaption class="card__caption">ON6 - Design & Physics</figcaption>
         </figure>
         <!-- <figure class="card Code">
           <img class="card__image" loading="lazy" src="images\projecten\comingsoon.png" height="250px" alt="">
