--- a/skills.html
+++ b/skills.html
@@ -25,8 +25,7 @@
         <ul class="nav-menu">
           <li><a href="index.html" class="nav-links">HOME</a></li>
           <li><a href="aboutme.html" class="nav-links">ABOUT ME</a></li>
-          <li><a href="education.html" class="nav-links">EDUCATION</a></li>
-          <li><a href="experience.html" class="nav-links">EXPERIENCE</a></li>
+          <li><a href="education.html" class="nav-links">EDUCATION & EXPERIENCE</a></li>
           <li><a href="projects.html" class="nav-links">PROJECTS</a></li>
           <li><a href="skills.html" class="nav-links">SKILLS</a></li>
           <li><a href="contact.html" class="nav-links">CONTACT</a></li>
@@ -110,6 +109,16 @@
             <i class="fa-solid fa-star fa-xs"></i>
           </figcaption>
         </figure>
+        <figure class="card Coding">
+          <img class="card__image" loading="lazy" src="images\skills\Python.png" height="150px" alt="">
+          <figcaption class="card__caption">Python
+            <br></br>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+          </figcaption>
+        </figure>
         <figure class="card Software">
           <img class="card__image" loading="lazy" src="images\skills\Sketchup.png" height="150px" alt="">
           <figcaption class="card__caption">Sketchup
@@ -123,6 +132,15 @@
         <figure class="card Software">
           <img class="card__image" loading="lazy" src="images\skills\Autocad.png" height="150px" alt="">
           <figcaption class="card__caption">AutoCAD
+            <br></br>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+            <i class="fa-solid fa-star fa-xs"></i>
+          </figcaption>
+        </figure>
+        <figure class="card Coding">
+          <img class="card__image" loading="lazy" src="images\skills\Grasshopper.png" height="150px" alt="">
+          <figcaption class="card__caption">Grasshopper
             <br></br>
             <i class="fa-solid fa-star fa-xs"></i>
             <i class="fa-solid fa-star fa-xs"></i>
@@ -259,15 +277,6 @@
           </figcaption>
         </figure>
         <figure class="card Coding">
-          <img class="card__image" loading="lazy" src="images\skills\Python.png" height="150px" alt="">
-          <figcaption class="card__caption">Python
-            <br></br>
-            <i class="fa-solid fa-star fa-xs"></i>
-            <i class="fa-solid fa-star fa-xs"></i>
-            <i class="fa-solid fa-star fa-xs"></i>
-          </figcaption>
-        </figure>
-        <figure class="card Coding">
           <img class="card__image" loading="lazy"
             src="images\skills\141-1415523_responsive-web-design-with-html5-css3-html-and.jpg" height="150px" alt="">
           <figcaption class="card__caption">HTML & CSS
@@ -283,15 +292,6 @@
           <figcaption class="card__caption">Markdown
             <br></br>
             <i class="fa-solid fa-star fa-xs"></i>
-            <i class="fa-solid fa-star fa-xs"></i>
-            <i class="fa-solid fa-star fa-xs"></i>
-            <i class="fa-solid fa-star fa-xs"></i>
-          </figcaption>
-        </figure>
-        <figure class="card Coding">
-          <img class="card__image" loading="lazy" src="images\skills\Grasshopper.png" height="150px" alt="">
-          <figcaption class="card__caption">Grasshopper
-            <br></br>
             <i class="fa-solid fa-star fa-xs"></i>
             <i class="fa-solid fa-star fa-xs"></i>
             <i class="fa-solid fa-star fa-xs"></i>
