Projects update & CV

--- a/aboutme.html
+++ b/aboutme.html
@@ -54,7 +54,7 @@
                     <br></br> <br></br>
                     <h2 class="title">About Me</h2>
                     <p class="description">
-                        My name is Eda Akaltun, and I'm 22 years old.
+                        My name is Eda Akaltun, and I'm 23 years old.
                         I’m currently a last year MSc Building Technology student at the Technical University of Delft
                         and in the meantime active in the Solar Decathlon team of my university as a Climate Systems
                         engineer & contest champion for ventilation.
@@ -79,6 +79,10 @@
                     </div>
 
                     <script src="language.js"></script>
+
+                    <u> <a href="/pdf/cv.pdf" target="_blank">
+                        <p>CV</p>
+                      </a> </u>
                 </article>
             </div>
 
