--- a/projects.html
+++ b/projects.html
@@ -62,11 +62,11 @@
               src="images\projecten\Structural\6.png" height="250px" alt=""> </a>
           <figcaption class="card__caption">Structural Design - Full Glass Observatory</figcaption>
         </figure>
-        <figure class="card Code">
+        <!-- <figure class="card Code">
           <a href="https://github.com/EdaAkaltun/Project-T"> <img class="card__image" loading="lazy"
               src="" height="250px" alt=""> </a>
           <figcaption class="card__caption">Project T - Graduation Thesis</figcaption>
-        </figure>
+        </figure> -->
         <figure class="card Code">
           <a href="https://github.com/EdaAkaltun/MIEV"> <img class="card__image" loading="lazy"
               src="https://camo.githubusercontent.com/5893e88012d2c5b2a712ee80d3fb6f010346c2ecdf501f61364f30769b50753e/68747470733a2f2f63646e2e646973636f72646170702e636f6d2f6174746163686d656e74732f3834303636393930313832373939373730372f313034313436353132393636373134393937342f68696768715f69736f2e6a7067" height="250px" alt=""> </a>
@@ -92,21 +92,22 @@
               height="250px" alt=""> </a>
           <figcaption class="card__caption">CSS Portfolio</figcaption>
         </figure>
+        <figure class="card Architecture">
+          <a href="projects_on6.html"> <img class="card__image" loading="lazy" src="images\projecten\ON6\render.png"
+              height="250px" alt=""></a>
+          <figcaption class="card__caption">ON6 - Design & Physics</figcaption>
+        </figure>
+        <figure class="card Product">
+          <a href="projects_bucky.html"> <img class="card__image" loading="lazy"
+              src="images\projecten\Bucky\render_buckyfacade.png" height="250px" alt=""></a>
+          <figcaption class="card__caption">BUCKY LAB</figcaption>
+        </figure>
         <figure class="card Sustainability">
           <a href="projects_zero.html"> <img class="card__image" loading="lazy"
               src="images\projecten\Zero\situation2.png" height="250px" alt=""> </a>
           <figcaption class="card__caption">ZERO Energy</figcaption>
         </figure>
-        <figure class="card Product">
-          <a href=""> <img class="card__image" loading="lazy"
-              src="images\projecten\Bucky\render_buckyfacade.png" height="250px" alt=""></a>
-          <figcaption class="card__caption">BUCKY LAB</figcaption>
-        </figure>
-        <figure class="card Architecture">
-          <a href=""> <img class="card__image" loading="lazy" src="images\projecten\ON6\render.png"
-              height="250px" alt=""></a>
-          <figcaption class="card__caption">ON6 - Design & Physics</figcaption>
-        </figure>
+
         <!-- <figure class="card Code">
           <img class="card__image" loading="lazy" src="images\projecten\comingsoon.png" height="250px" alt="">
           <figcaption class="card__caption">Earthy</figcaption>
