--- a/projects_on6.html
+++ b/projects_on6.html
@@ -27,8 +27,7 @@
         <ul class="nav-menu">
           <li><a href="index.html" class="nav-links">HOME</a></li>
           <li><a href="aboutme.html" class="nav-links">ABOUT ME</a></li>
-          <li><a href="education.html" class="nav-links">EDUCATION</a></li>
-          <li><a href="experience.html" class="nav-links">EXPERIENCE</a></li>
+          <li><a href="education.html" class="nav-links">EDUCATION & EXPERIENCE</a></li>
           <li><a href="projects.html" class="nav-links">PROJECTS</a></li>
           <li><a href="skills.html" class="nav-links">SKILLS</a></li>
           <li><a href="contact.html" class="nav-links">CONTACT</a></li>
@@ -83,37 +82,37 @@
           <b>
             <p>Name</p>
           </b>
-          <p>Lorem ipsum dolor sit amet</p>
+          <p>ON 6 - Sporthogeschool ontwerp</p>
 
           <b> <br></br>
             <p>Details</p>
           </b>
-          <p> Lorem ipsum dolor sit amet</p>
+          <p> BSc Bouwkunde TU Delft afstudeerproject</p>
 
           <b> <br></br>
             <p>Client</p>
           </b>
-          <p>Lorem ipsum dolor sit amet</p>
+          <p>Schoolwork: TU Delft</p>
 
           <b> <br></br>
             <p>Date</p>
           </b>
-          <p>Lorem ipsum dolor sit amet</p>
+          <p>2021</p>
 
           <b> <br></br>
             <p>Size</p>
           </b>
-          <p>Lorem ipsum dolor sit amet</p>
+          <p>600m2</p>
 
           <b> <br></br>
             <p>Team</p>
           </b>
-          <p>Lorem ipsum dolor sit amet</p>
+          <p>Eda Akaltun</p>
 
           <b> <br></br>
             <p>Supervisor</p>
           </b>
-          <p>Lorem ipsum dolor sit amet</p>
+          <p>Suzana Milinovic, Bjorn Peters & Dirk Visser</p>
           <br></br>
 
         </article>
@@ -121,8 +120,18 @@
         <article>
           <b>
             <p>Project Description</p>
+            <p>Disclaimer: de verslagen moesten in minder dan een week van tijd naast andere deadlines getikt worden dus eventuele brein errors door vermoeidheid wat betreft taal zijn mogelijk :)</p>
           </b>
-          <p>
+          <u> <a href="/pdf/poster_do.pdf" target="_blank">
+            <p>View PDF - Poster</p>
+          </a> </u>
+          <u> <a href="/pdf/5419123_EdaAkaltun_BK6ON6_KOverslag.pdf" target="_blank">
+            <p>View PDF - Bouwfysica</p>
+          </a> </u>
+          <u> <a href="/pdf/5419123_EdaAkaltun_BK6ON6_DCverslag.pdf" target="_blank">
+            <p>View PDF - Constructie</p>
+          </a> </u>
+          <!-- <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Odio tempor orci dapibus ultrices in. Sed risus ultricies tristique nulla aliquet enim
             tortor at. Malesuada fames ac turpis egestas sed tempus urna et. Aliquet lectus proin nibh nisl condimentum
@@ -151,16 +160,13 @@
             faucibus vitae. Dignissim cras tincidunt lobortis feugiat vivamus at. In vitae turpis massa sed elementum
             tempus. Ultrices eros in cursus turpis massa tincidunt dui ut ornare. Elementum eu facilisis sed odio morbi
             quis commodo. Etiam erat velit scelerisque in dictum non consectetur a.
-          </p> <br></br>
-          <u> <a href="  " target="_blank">
-              <p>Download PDF</p>
-            </a> </u>
+          </p> <br></br> -->
           <br></br>
 
         </article>
       </div>
 
-      <section>
+      <!-- <section>
 
         <div class="container">
           <div class="box">
@@ -208,7 +214,7 @@
           </div>
         </div>
 
-      </section>
+      </section> -->
 
 
       <script>
