--- a/projects_stuctural.html
+++ b/projects_stuctural.html
@@ -27,8 +27,7 @@
         <ul class="nav-menu">
           <li><a href="index.html" class="nav-links">HOME</a></li>
           <li><a href="aboutme.html" class="nav-links">ABOUT ME</a></li>
-          <li><a href="education.html" class="nav-links">EDUCATION</a></li>
-          <li><a href="experience.html" class="nav-links">EXPERIENCE</a></li>
+          <li><a href="education.html" class="nav-links">EDUCATION & EXPERIENCE</a></li>
           <li><a href="projects.html" class="nav-links">PROJECTS</a></li>
           <li><a href="skills.html" class="nav-links">SKILLS</a></li>
           <li><a href="contact.html" class="nav-links">CONTACT</a></li>
@@ -108,7 +107,7 @@
           <b> <br></br>
             <p>Team</p>
           </b>
-          <p>Cedric Spijksma, Cedric Spijksma & Eda Akaltun</p>
+          <p>Cedric Spijksma, Nick Heijne & Eda Akaltun</p>
 
           <b> <br></br>
             <p>Supervisor</p>
