--- a/experience.html
+++ b/experience.html
@@ -24,8 +24,7 @@
                 <ul class="nav-menu">
                     <li><a href="index.html" class="nav-links">HOME</a></li>
                     <li><a href="aboutme.html" class="nav-links">ABOUT ME</a></li>
-                    <li><a href="education.html" class="nav-links">EDUCATION</a></li>
-                    <li><a href="experience.html" class="nav-links">EXPERIENCE</a></li>
+                    <li><a href="education.html" class="nav-links">EDUCATION & EXPERIENCE</a></li>
                     <li><a href="projects.html" class="nav-links">PROJECTS</a></li>
                     <li><a href="skills.html" class="nav-links">SKILLS</a></li>
                     <li><a href="contact.html" class="nav-links">CONTACT</a></li>
