--- a/projects_bucky.html
+++ b/projects_bucky.html
@@ -27,8 +27,7 @@
         <ul class="nav-menu">
           <li><a href="index.html" class="nav-links">HOME</a></li>
           <li><a href="aboutme.html" class="nav-links">ABOUT ME</a></li>
-          <li><a href="education.html" class="nav-links">EDUCATION</a></li>
-          <li><a href="experience.html" class="nav-links">EXPERIENCE</a></li>
+          <li><a href="education.html" class="nav-links">EDUCATION & EXPERIENCE</a></li>
           <li><a href="projects.html" class="nav-links">PROJECTS</a></li>
           <li><a href="skills.html" class="nav-links">SKILLS</a></li>
           <li><a href="contact.html" class="nav-links">CONTACT</a></li>
@@ -69,7 +68,7 @@
             <hr class="divider">
             Date<br><strong>2022</strong><br>
             <hr class="divider">
-            Made by<br><strong>Me</strong>
+            Made by<br><strong>Oscar</strong>
             <hr class="divider">
             Links<br><strong><a href="#">See full image</a> </strong>
           </div>
@@ -79,88 +78,23 @@
       <br></br> <br></br>
       <div class="boxes">
 
-        <article>
-          <b>
-            <p>Name</p>
-          </b>
-          <p>Lorem ipsum dolor sit amet</p>
-
-          <b> <br></br>
-            <p>Details</p>
-          </b>
-          <p> Lorem ipsum dolor sit amet</p>
-
-          <b> <br></br>
-            <p>Client</p>
-          </b>
-          <p>Lorem ipsum dolor sit amet</p>
-
-          <b> <br></br>
-            <p>Date</p>
-          </b>
-          <p>Lorem ipsum dolor sit amet</p>
-
-          <b> <br></br>
-            <p>Size</p>
-          </b>
-          <p>Lorem ipsum dolor sit amet</p>
-
-          <b> <br></br>
-            <p>Team</p>
-          </b>
-          <p>Lorem ipsum dolor sit amet</p>
-
-          <b> <br></br>
-            <p>Supervisor</p>
-          </b>
-          <p>Lorem ipsum dolor sit amet</p>
-          <br></br>
-
-        </article>
-
-        <article>
-          <b>
-            <p>Project Description</p>
-          </b>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Odio tempor orci dapibus ultrices in. Sed risus ultricies tristique nulla aliquet enim
-            tortor at. Malesuada fames ac turpis egestas sed tempus urna et. Aliquet lectus proin nibh nisl condimentum
-            id venenatis a. Amet luctus venenatis lectus magna. Massa tincidunt dui ut ornare lectus sit amet. At
-            elementum eu facilisis sed odio morbi. Convallis tellus id interdum velit. Varius morbi enim nunc faucibus.
-            Tellus rutrum tellus pellentesque eu tincidunt tortor aliquam.
-
-          </p> <br></br>
-          <p>
-            Amet nisl suscipit adipiscing bibendum est ultricies integer. Eu facilisis sed odio morbi quis. Viverra
-            ipsum nunc aliquet bibendum enim. Hac habitasse platea dictumst vestibulum rhoncus est pellentesque elit
-            ullamcorper. Sed enim ut sem viverra aliquet eget sit amet tellus. Ultrices gravida dictum fusce ut placerat
-            orci nulla. Tortor pretium viverra suspendisse potenti nullam ac tortor. Lectus magna fringilla urna
-            porttitor rhoncus. At consectetur lorem donec massa sapien. Commodo viverra maecenas accumsan lacus vel
-            facilisis. Elit duis tristique sollicitudin nibh sit amet commodo. Viverra vitae congue eu consequat. Ut
-            diam quam nulla porttitor massa id neque. Tincidunt augue interdum velit euismod. Elit eget gravida cum
-            sociis natoque penatibus et magnis dis. Sed elementum tempus egestas sed sed risus pretium quam. Aliquam
-            malesuada bibendum arcu vitae elementum curabitur. Facilisi morbi tempus iaculis urna id. Convallis aenean
-            et tortor at risus viverra adipiscing.
-          </p> <br></br>
-          <p>
-            Euismod in pellentesque massa placerat duis ultricies. Tempus egestas sed sed risus pretium. Maecenas sed
-            enim ut sem. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non. Venenatis lectus magna
-            fringilla urna. Libero justo laoreet sit amet cursus. Elementum integer enim neque volutpat ac tincidunt.
-            Sem et tortor consequat id. Tortor condimentum lacinia quis vel eros donec ac. Eu nisl nunc mi ipsum
-            faucibus vitae. Dignissim cras tincidunt lobortis feugiat vivamus at. In vitae turpis massa sed elementum
-            tempus. Ultrices eros in cursus turpis massa tincidunt dui ut ornare. Elementum eu facilisis sed odio morbi
-            quis commodo. Etiam erat velit scelerisque in dictum non consectetur a.
-          </p> <br></br>
-          <u> <a href="  " target="_blank">
-              <p>Download PDF</p>
+        <video width="400" controls>
+          <source src="https://www.youtube.com/watch?v=7b6mIpysgOE" type="video/mp4">
+          <source src="https://www.youtube.com/watch?v=7b6mIpysgOE" type="video/ogg">
+          Your browser does not support HTML video.
+        </video>
+          <u> <a href="/pdf/Poster parshade.pdf" target="_blank">
+              <p>View Poster</p>
+            </a> </u>
+            <u> <a href="/pdf/Buckylab Design_Definitive Report_Eda Akaltun_Oscar Chantrel_Laura Romano_Cedric Spijksma.pdf" target="_blank">
+              <p>View Report</p>
             </a> </u>
           <br></br>
 
         </article>
       </div>
 
-      <section>
+      <!-- <section>
 
         <div class="container">
           <div class="box">
@@ -208,7 +142,7 @@
           </div>
         </div>
 
-      </section>
+      </section> -->
 
 
       <script>
