--- a/aboutme.html
+++ b/aboutme.html
@@ -80,7 +80,7 @@
 
                     <script src="language.js"></script>
 
-                    <u> <a href="/pdf/cv.pdf" target="_blank">
+                    <u> <a href="pdf/cv.pdf" target="_blank">
                         <p>CV</p>
                       </a> </u>
                 </article>
