--- a/projects_bucky.html
+++ b/projects_bucky.html
@@ -83,10 +83,10 @@
           <source src="https://www.youtube.com/watch?v=7b6mIpysgOE" type="video/ogg">
           Your browser does not support HTML video.
         </video>
-          <u> <a href="/pdf/Poster parshade.pdf" target="_blank">
+          <u> <a href="pdf/Poster parshade.pdf" target="_blank">
               <p>View Poster</p>
             </a> </u>
-            <u> <a href="/pdf/Buckylab Design_Definitive Report_Eda Akaltun_Oscar Chantrel_Laura Romano_Cedric Spijksma.pdf" target="_blank">
+            <u> <a href="pdf/Buckylab Design_Definitive Report_Eda Akaltun_Oscar Chantrel_Laura Romano_Cedric Spijksma.pdf" target="_blank">
               <p>View Report</p>
             </a> </u>
           <br></br>
