--- a/projects_on6.html
+++ b/projects_on6.html
@@ -122,13 +122,13 @@
             <p>Project Description</p>
             <p>Disclaimer: de verslagen moesten in minder dan een week van tijd naast andere deadlines getikt worden dus eventuele brein errors door vermoeidheid wat betreft taal zijn mogelijk :)</p>
           </b>
-          <u> <a href="/pdf/poster_do.pdf" target="_blank">
+          <u> <a href="pdf/poster_do.pdf" target="_blank">
             <p>View PDF - Poster</p>
           </a> </u>
-          <u> <a href="/pdf/5419123_EdaAkaltun_BK6ON6_KOverslag.pdf" target="_blank">
+          <u> <a href="pdf/5419123_EdaAkaltun_BK6ON6_KOverslag.pdf" target="_blank">
             <p>View PDF - Bouwfysica</p>
           </a> </u>
-          <u> <a href="/pdf/5419123_EdaAkaltun_BK6ON6_DCverslag.pdf" target="_blank">
+          <u> <a href="pdf/5419123_EdaAkaltun_BK6ON6_DCverslag.pdf" target="_blank">
             <p>View PDF - Constructie</p>
           </a> </u>
           <!-- <p>
