--- a/projects_bucky.html
+++ b/projects_bucky.html
@@ -78,11 +78,10 @@
       <br></br> <br></br>
       <div class="boxes">
 
-        <video width="400" controls>
-          <source src="https://www.youtube.com/watch?v=7b6mIpysgOE" type="video/mp4">
-          <source src="https://www.youtube.com/watch?v=7b6mIpysgOE" type="video/ogg">
-          Your browser does not support HTML video.
-        </video>
+        <iframe width="420" height="315"
+        src="https://www.youtube.com/watch?v=7b6mIpysgOE">
+        </iframe>
+
           <u> <a href="pdf/Poster parshade.pdf" target="_blank">
               <p>View Poster</p>
             </a> </u>
