--- a/projects_bucky.html
+++ b/projects_bucky.html
@@ -78,12 +78,15 @@
       <br></br> <br></br>
       <div class="boxes">
 
-        <iframe width="420" height="315"
+        <!-- <iframe width="420" height="315"
         src="https://www.youtube.com/watch?v=7b6mIpysgOE">
-        </iframe>
+        </iframe> -->
 
           <u> <a href="pdf/Poster parshade.pdf" target="_blank">
               <p>View Poster</p>
+            </a> </u>
+            <u> <a href="https://www.youtube.com/watch?v=7b6mIpysgOE" target="_blank">
+              <p>View Video</p>
             </a> </u>
             <u> <a href="pdf/Buckylab Design_Definitive Report_Eda Akaltun_Oscar Chantrel_Laura Romano_Cedric Spijksma.pdf" target="_blank">
               <p>View Report</p>
