--- a/education.html
+++ b/education.html
@@ -47,7 +47,7 @@
 
             <div class="textbox">
                 <img class="textbox_image_logos"
-                    src="/images/logos/hfb.jpg">
+                    src="images/logos/hfb.jpg">
 
                 <h2>HFB</h2>
                 <p>Graduation intership
@@ -71,7 +71,7 @@
 
             <div class="textbox">
                 <img class="textbox_image_logos"
-                    src="/images/logos/sum.png">
+                    src="images/logos/sum.png">
 
                 <h2>SUM - Symbiotic Urban Movement</h2>
                 <p>Climate Systems Engineer
@@ -81,7 +81,7 @@
 
             <div class="textbox">
                 <img class="textbox_image_logos"
-                    src="/images/logos/bk.jpg">
+                    src="images/logos/bk.jpg">
 
                 <h2>TU Delft Faculty of Architecture and the Built Environment</h2>
                 <p>Student Council member 2022/2023
@@ -97,7 +97,7 @@
 
             <div class="textbox">
                 <img class="textbox_image_logos"
-                    src="/images/logos/tudelft.jpg">
+                    src="images/logos/tudelft.jpg">
                 <div class="textbox_text">
                     <h2>Delft University of Technology</h2>
                     <p>Technische Universiteit Delft
@@ -114,7 +114,7 @@
 
             <div class="textbox">
                 <img
-                    src="/images/logos/hhs.jpg">
+                    src="images/logos/hhs.jpg">
                 <h2>The Hague University of Applied Sciences</h2>
                 <p>De Haagse Hogeschool / The Hague University of Applied Sciences
                     Bachelor of Science - BSc, Architecture and Construction Engineering
@@ -125,7 +125,7 @@
 
             <div class="textbox">
                 <img
-                    src="/images/logos/maerlant.jpg">
+                    src="images/logos/maerlant.jpg">
                 <h2>Maerlant-Lyceum</h2>
                 <p>Natuur & Techniek + Natuur & Gezondheid · (2011 - 2016, 5 years)</p>
             </div>
@@ -138,7 +138,7 @@
 
             <div class="textbox">
                 <img class="textbox_image_logos"
-                    src="/images/logos/x.jpg">
+                    src="images/logos/x.jpg">
                 <div class="textbox_text">
                     <h2>Cambridge Assessment English</h2>
                     <p>Certificate of Proficiency in English (CEFR Level C2) · (2020)
@@ -148,7 +148,7 @@
 
             <div class="textbox">
                 <img
-                    src="/images/logos/x.jpg">
+                    src="images/logos/x.jpg">
                 <h2>Koninklijke PBNA</h2>
                 <p>VOL-VCA · (2018 - 2028)
             </div>
