--- a/aboutme.html
+++ b/aboutme.html
@@ -1,5 +1,8 @@
 <html>
 
+
+<!-- https://codepen.io/antho-fsy/pen/wJqWKj -->
+
 <head>
     <title>Portfolio website - Eda Akaltun</title>
     <meta charset="UTF-8">
@@ -16,11 +19,12 @@
 
         <div class="nav-container">
             <nav class="navbar">
-                <a href="index.html"> <img src="images/logo.png" alt="logo image" id="navbar-logo"> </a>
-                <div class="menu-toggle" id="mobile-menu">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
+              <a href="index.html"> <img class="navbar_logo"
+                src="images/logodark.png"> </a>
+              <div class="menu-toggle" id="mobile-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
                 </div>
                 <ul class="nav-menu">
                     <li><a href="index.html" class="nav-links">HOME</a></li>
