--- a/experience.html
+++ b/experience.html
@@ -15,11 +15,12 @@
 
         <div class="nav-container">
             <nav class="navbar">
-                <a href="index.html"> <img src="images/logo.png" alt="logo image" id="navbar-logo"> </a>
-                <div class="menu-toggle" id="mobile-menu">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
+              <a href="index.html"> <img class="navbar_logo"
+                src="images/logodark.png"> </a>
+              <div class="menu-toggle" id="mobile-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
                 </div>
                 <ul class="nav-menu">
                     <li><a href="index.html" class="nav-links">HOME</a></li>
